# drawing_app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  home.html  login.html  register.html  startup.txt  temp.txt
data/: db.sqlite  db.sqlite-shm  db.sqlite-wal
data/canvases/: 247bd39c-ccf9-4d31-9133-a53553d68188.jsonl  440b926c-9573-44b1-9ea9-40d950aceafe.jsonl  7deb4226-4814-4a19-9823-03e970ace864.jsonl  9ef33dc8-474c-4159-8c36-9d68b38026a0.jsonl  a5110878-e953-4c21-b7ce-69dc615d4fcc.jsonl  fc6368a6-d442-493f-93fa-9fe2b8079df0.jsonl  ff749c0b-b9c6-43e2-810d-5c1627c4c142.jsonl
documentation/: Canvas_sequenz  architektur_doku.html  architektur_doku.md  middleware_sequenz  permission_update_sequenz  websocket_sequenz
drawer/: LinkedListMap.js  LinkedListMap.js.map  drawer.js  drawer.js.map  index.html  menuApi.js.map
frontend/: copy-static.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: api.ts  main.ts  router.ts
migrations/: 20250728150439_create_user_table.sql
old/: ws_debug.ts
old/public_old/: style.css
old/src_old/: LinkedListMap.js  LinkedListMap.js.map  LinkedListMap.ts  drawer.js.map  drawer.ts  menuApi.js  menuApi.js.map
public/: api.js  api.js.map  drawer.js  drawer.js.map  index.html  main.js  main.js.map  menuApi.js.map  router.js  router.js.map  styles.css
public/pages/: canvas.js  (+7 more)
src/: auth.rs  canvas_manager.rs  handlers.rs  identifiable_web_socket.rs  main.rs  permission_refresh_list.rs  socket_claims_manager.rs  websocket_handlers.rs  ws_stuff.rs
test_folder/: ahhhh  login.html
(+23 files in other folders)
