[package]
name = "web_server_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-cookies = "0.9"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "time"] }
dotenvy = "0.15"

argon2 = "0.5" # For password hashing
rand_core = { version = "0.6", features = ["std"] } # Dependency for argon2, ensures random salt generation
uuid = { version = "1.8", features = ["v4", "serde"] } # "v4" for random UUIDs, "serde" for easy serialization/deserialization
futures = "0.3" # <--- Add this line

